--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
-        "pinia": "^3.0.2"
+        "laravel-echo": "^2.0.2",
+        "pinia": "^3.0.2",
+        "pusher-js": "^8.4.0"
     }
 }
